--- a/app/views/users/new.erb
+++ b/app/views/users/new.erb
@@ -3,9 +3,15 @@
   <form class="form-horizontal" action="/users" method="post">
 
   <div class="form-group">
-    <label for="user_name" class="control-label">Name: </label>
-    <input class="form-control" id="user_name" type="name" name="user[name]">
+    <label for="user_first_name" class="control-label">First Name: </label>
+    <input class="form-control" id="user_name" type="text" name="user[first_name]">
   </div>
+
+  <div class="form-group">
+    <label for="user_last_name" class="control-label">Last Name: </label>
+    <input class="form-control" id="user_name" type="text" name="user[last_name]">
+  </div>
+
 
   <div class="form-group">
     <label for="user_email" class="control-label">E-mail: </label>
