--- a/public/css/application.css
+++ b/public/css/application.css
@@ -2,7 +2,6 @@
   margin: 20px auto;
   width: 800px;
   padding: 0px 20px 20px 20px;
-  border: 1px dotted black;
 }
 
 .container h1 {
@@ -77,6 +76,14 @@ form.quirks {
   font-weight: bold;
   float: left;
   text-align: right;
-  margin-right: 20px;
   width: 200px;
+}
+
+table{
+   border: 1px solid black;
+}
+
+th, td{
+  padding: 12px 15px 12px 15px;
+  border: 1px solid black;
 }
