--- a/app/views/users/show.erb
+++ b/app/views/users/show.erb
@@ -1,5 +1,8 @@
-
 <div class="container">
-<p>Welcome</p>
-<%= @user.email %>
+<h1>Welcome <%= @user.first_name %> <%= @user.last_name %>!</h1>
+
+<a href="/fxtrans/new">Create an FX Request</a>
+
+
+
 </div>
