Update profile to show fx rate table

--- a/app/views/fxtrans/index.erb
+++ b/app/views/fxtrans/index.erb
@@ -8,7 +8,7 @@
       <th>HAVE</th>
       <th>WANT</th>
       <th>ZIPCODE</th>
-      <th>AT</th>
+      <th>FOR</th>
     </tr>
     <% @fxtrans.each do |tran| %>
     <tr>
