--- a/app/views/users/show.erb
+++ b/app/views/users/show.erb
@@ -4,7 +4,6 @@
 <a href="/fxtrans/new">Create an FX Request</a>
 
 <h3>OPEN FX's REQUEST</h3>
-
   <table>
     <tr>
       <th>ID</th>
@@ -35,23 +34,30 @@
     <tr>
       <th>ID</th>
       <th>ZIPCODE</th>
+      <th>USER</th>
       <th>AMOUNT</th>
       <th>HAVE</th>
       <th>WANT</th>
-      <th>FOR</th>
-      <th>BY</th>
+      <th>RATE</th>
+      <th>EMAIL</th>
     </tr>
-    <% @fxmatches.each do |tran| %>
+    <% @fxmatches.length.times do |num| %>
     <tr>
-      <td><%= tran.id %> </td>
-      <td><%= tran.zipcode %></td>
-      <td><%= tran.amount %></td>
-      <td class="source"><%= tran.curr_sell %></td>
-      <td class="quote"><%= tran.curr_buy %></td>
-      <td><a class="fx-rate" href="/fxrate">REQUEST RATE</a></td>
-      <td class="requestor"><%= tran.requestor.first_name %></td>
+      <td><%= @fxmatches[num].id %> </td>
+      <td><%= @fxmatches[num].zipcode %></td>
+      <td class="requestor"><%= @fxmatches[num].requestor.first_name %></td>
+      <td><%= @fxmatches[num].amount %></td>
+      <td class="source"><%= @fxmatches[num].curr_sell %></td>
+      <td class="quote"><%= @fxmatches[num].curr_buy %></td>
+      <td><%= (1 / ((@fx_rates[num].fractional)/100.00)).round(2) %></td>
+      <td class="requestor"><%= @fxmatches[num].requestor.email %></td>
     </tr>
     <% end %>
   </table>
+  <br>
+
+<!-- <form action="/">
+  <input type="submit" value="CALCULATE">
+</form> -->
 
 </div>
