--- a/app/views/users/show.erb
+++ b/app/views/users/show.erb
@@ -40,6 +40,7 @@
       <th>WANT</th>
       <th>RATE</th>
       <th>EMAIL</th>
+      <th>AMOUNT</th>
     </tr>
     <% @fxmatches.length.times do |num| %>
     <tr>
@@ -49,8 +50,9 @@
       <td><%= @fxmatches[num].amount %></td>
       <td class="source"><%= @fxmatches[num].curr_sell %></td>
       <td class="quote"><%= @fxmatches[num].curr_buy %></td>
-      <td><%= (1 / ((@fx_rates[num].fractional)/100.00)).round(2) %></td>
+      <td><%= ((@cpty_fx_rates[num].fractional)/100.00).round(2) %></td>
       <td class="requestor"><%= @fxmatches[num].requestor.email %></td>
+      <td class="requestor"> <%= @cpty_converted_vals[num] %></td>
     </tr>
     <% end %>
   </table>
