--- a/app/views/users/show.erb
+++ b/app/views/users/show.erb
@@ -1,9 +1,13 @@
 <div class="container">
 <h1>Welcome <%= @user.first_name %> <%= @user.last_name %>!</h1>
 
-<a href="/fxtrans/new">Create an FX Request</a>
+<% if @user.fxrequests.size < 1 %>
+  <a href="/fxtrans/new">Create an FX Request</a>
+<% else %>
+  Currently, you can only process one request at a time!
+<% end %>
 
-<h3>OPEN FX's REQUEST</h3>
+<h3>OPEN FX REQUEST</h3>
   <table>
     <tr>
       <th>ID</th>
@@ -29,7 +33,8 @@
     <% end %>
   </table>
 
-<h3>MATCHED FX's</h3>
+<% if @user.fxrequests.size >= 1 %>
+  <h3>MATCHED FX REQUEST</h3>
   <table>
     <% @fxmatches.length.times do |num| %>
     <tr>
@@ -48,7 +53,7 @@
       <td><%= @fxmatches[num].zipcode %></td>
       <td><%= @fxmatches[num].amount %></td>
       <td class="source"><%= @fxmatches[num].curr_sell %></td>
-      <td><%= ((@cpty_fx_rates[num].fractional)/100.00).round(2) %></td>
+      <td><%= @cpty_fx_rates[num] %></td>
       <td class="requestor"> <%= @cpty_converted_vals[num] %></td>
       <td class="quote"><%= @fxmatches[num].curr_buy %></td>
       <td><%= @target_cpty_difference[num] %></td>
@@ -57,6 +62,8 @@
     <% end %>
   </table>
   <br>
+<% end %>
+
 
 
 </div>
