Have working mvp but need to refactor

--- a/app/views/users/login.erb
+++ b/app/views/users/login.erb
@@ -1,5 +1,10 @@
 <div class="container">
   <h1>LOGIN:</h1>
+  <div class="errors">
+   <% if @login_error %>
+     <ul>Please validate your Username or Password!</ul>
+   <% end %>
+  </div>
 
   <form class="form-horizontal" action="/login" method="post">
 
