--- a/app/views/users/show.erb
+++ b/app/views/users/show.erb
@@ -15,7 +15,7 @@
       <th>ZIPCODE</th>
       <th>AMOUNT</th>
       <th>CURRENCY YOU HAVE</th>
-      <th>AT</th>
+      <th>RATE</th>
       <th>EXPECTED VALUE</th>
       <th>CURRENCY YOU WANT</th>
     </tr>
@@ -41,10 +41,10 @@
     <tr>
       <th>ID</th>
       <th>ZIPCODE</th>
-      <th>CURRENCY CPTY HAS</th>
-      <th>HAVE</th>
-      <th>RATE</th>
       <th>AMOUNT</th>
+      <th>CURRENCY CPTY HAS</th>
+      <th>RATE</th>
+      <th>EXPECTED VALUE</th>
       <th>CURRENCY CPTY WANTS</th>
       <th>DIFFERENCE</th>
       <th>EMAIL</th>
