--- a/app/views/layout.erb
+++ b/app/views/layout.erb
@@ -12,6 +12,7 @@
 <body>
 <nav>
   <ul class="navbar-left"><li><a href="/">HOME</a></li></ul>
+  <ul class="navbar-left"><li><a href="/about">ABOUT</a></li></ul>
   <ul class="navbar-right">
     <% if logged_in? %>
       <li><a href="/users/<%= session[:user_id] %>"><span class="" aria-hidden="true"></span>PROFILE</a></li>
