--- a/app/views/about.erb
+++ b/app/views/about.erb
@@ -1,4 +1,7 @@
 <div class="container">
 <h1>PURE FX</h1>
-<p>PURE FX is a peer-to-peer foreign exchange platform.</p>
+<p>a peer-to-peer foreign exchange platform.</p>
+<p>no spreads or fees, just rely on folks in your proximity</p>
+<p>...with a little bit of coordination</p>
+
 </div>
