--- a/app/views/layout.erb
+++ b/app/views/layout.erb
@@ -30,7 +30,11 @@
 </head>
 <body>
 <nav class="navbar navbar-default navbar-static-top" role="navigation" style="margin-bottom: 0">
+  <div class="navbar-header">
+    <a class="navbar-brand" href="/">PURE FX</a>
+  </div>
  <ul class="nav navbar-top-links navbar-right">
+  <li><a href="/about">ABOUT</a></li>
     <% if logged_in? %>
       <li><a href="/users/<%= session[:user_id] %>">PROFILE</a></li>
       <li><a href="/logout">LOGOUT</a></li>
@@ -39,13 +43,6 @@
       <li><a href="/login">LOGIN</a></li>
     <% end %>
  </ul>
-<div class="navbar-default sidebar" role="navigation">
- <div class="sidebar-nav navbar-collapse">
- <ul class="nav" id="side-menu">
-  <li><a href="/">HOME</a></li>
-  <li><a href="/about">ABOUT</a></li>
-  <li><a href="/about">FX REQUEST</a></li>
-  </ul>
 </div>
 </div>
 
