--- a/app/views/users/login.erb
+++ b/app/views/users/login.erb
@@ -1,25 +1,29 @@
 <div class="container">
-  <h1>LOGIN:</h1>
-  <div class="errors">
-   <% if @login_error %>
-     <ul>Please validate your Username or Password!</ul>
-   <% end %>
-  </div>
-
-  <form class="form-horizontal" action="/login" method="post">
-
-    <div class="form-group">
-      <label for="user_email" class="control-label">eMail: </label>
-      <input class="form-control" id="user_email" type="text" name="user[email]">
+    <div class="row">
+        <div class="col-md-4 col-md-offset-4">
+            <div class="login-panel panel panel-default">
+                <div class="panel-heading">
+                    <h3 class="panel-title">LOGIN:</h3>
+                </div>
+                <div class="panel-body">
+                        <form role="form" action="/login" method="post">
+                        <fieldset>
+                            <div class="form-group">
+                              <input class="form-control" placeholder="E-mail" type="email" name="user[email]" autofocus>
+                            </div>
+                            <div class="form-group">
+                              <input class="form-control" placeholder="Password" id="user_password" type="password" name="user[password]">
+                            </div>
+                            <button class="btn btn-lg btn-success btn-block" type="submit" value="Login">LOGIN</button>
+                            <div class="errors">
+                             <% if @login_error %>
+                               <ul>Please validate your Username or Password!</ul>
+                             <% end %>
+                            </div>
+                        </fieldset>
+                    </form>
+                </div>
+            </div>
+        </div>
     </div>
-
-    <div class="form-group">
-      <label for="user_password" class="control-label">Password: </label>
-      <input class="form-control" id="user_password" type="password" name="user[password]">
-    </div>
-
-    <button class="btn btn-primary" type="submit" value="Login">SUBMIT</button>
-
-    <a class="btn btn-danger" href='/users/new'>REGISTER</a>
-  </form>
 </div>
